--- a/style.css
+++ b/style.css
@@ -384,6 +384,12 @@ img {
   line-height: 1.5;
 }
 
+.wp-block-gallery figcaption {
+  margin: -8px auto 0;
+  text-align: center;
+  font-size: 14px;
+}
+
 /* Form styles */
 input[type=text],
 input[type=email],
